--- a/Week 06 - Bank Management Project/Module 23 - Bank Management Project Part-III/mamar_bank/mamar_bank/.env
+++ b/Week 06 - Bank Management Project/Module 23 - Bank Management Project Part-III/mamar_bank/mamar_bank/.env
@@ -4,3 +4,6 @@ DB_USER=postgres
 DB_PASSWORD=tamima
 DB_HOST=localhost
 DB_PORT=5432
+
+EMAIL_USER=mitaakter1984@gmail.com
+EMAIL_PASSWORD=izvatzeofzmsdatc
