FH: Module 24 Done

--- a/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/lms_project/.env
+++ b/Week 06 - Bank Management Project/Module 24 - Assignment 05/lms_project/lms_project/.env
@@ -1,7 +1,20 @@
+SECRET_KEY=django-insecure-#*-%%8hw5mymgpgi2281rx6^cbsvpk+!aho^#72jrqf#x&89l!
+DB_NAME=learnPalaceLibrary
+DB_USER=postgres
+DB_PASSWORD=tamima
+DB_HOST=localhost
+DB_PORT=5432
+
+EMAIL_USER=mitaakter1984@gmail.com
+EMAIL_PASSWORD=yiwraeltffnbdkmr 
 
 
 
 
-admin - admin
-tyeasmino - #d3{'p;wE$yA
-mitaakter1984 - 61(XTR'@Zmae
+
+
+
+
+# admin - admin
+# tyeasmino - #d3{'p;wE$yA
+# mitaakter1984 - 61(XTR'@Zmae
